Made changes to Personal/work summary

--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 
 <head>
+  <!-- Paul Nguyen
+	Portfolio/resume site
+	Date: Sat Mar 23 13:02:50 PDT 2019
+	modernizr script is linked at bottom of document with other dependencies.
+  -->
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Paul's Resume site</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +25,6 @@
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-
 
 </head>
 
@@ -64,10 +68,10 @@
         <h1 class="mb-0">Paul
           <span class="text-primary">Nguyen</span>
         </h1>
-        <div class="subheading mb-5">125 Cambon Drive San Francisco, CA 94132 ·(415) 515-0551 ·
+        <div class="subheading mb-5">125 Cambon Drive San Francisco, CA _94132 ·(415) 515-0551 ·
           <a href="mailto:name@email.com">paulngu1120@email.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am a prospective web developer, enthusiatic about all things web and technology! I am experienced in many front-end and back-end frameworks, and excel in proactive collaboration in solving the toughest development issues.    </p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
@@ -95,7 +99,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Senior Developer/Quality Assurance</h3>
             <div class="subheading mb-3">HCL Technologies Inc @ YouTube</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+	    <p>Plan, automate, and execute test strategies and scripts for functionality of HTML, CSS, Javascript, and Network security protocols for brand devices that intend to market the YouTube Application on their product. This involves compilation of performance, functionality, features, and hardware specs on all devices against specific technical requirements of YouTube Inc.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2017 - Present</span>
@@ -126,7 +130,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">University of Berkeley, Extension</h3>
-            <div class="subheading mb-3">Software Development and Programming certificate</div>
+	    <div class="subheading mb-3">Certificate Program</div>
+	    <div>Software Development and Programming</div>
             <p>GPA: 3.56</p>
           </div>
           <div class="resume-date text-md-right">
