--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a web developer, I enjoy most of my time with the latest computer games. For the most part in casual competition gaming with a handful of friends and family. When the opportunity arises, I love to indulge in travel and food adventures.</p>
+        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, In the past I was an aspiring chef, exploring different combinations of ingredients that brings new flavor to the table! I spend a large amount of my free time exploring the latest technology advancements in the front-end and back-end web development world.</p>
       </div>
     </section>
 
@@ -223,10 +223,6 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
         </ul>
       </div>
     </section>
@@ -244,8 +240,8 @@
   <script src="js/resume.min.js"></script>
 	
 
-  <!-- modernize compatibility issues -->
-  <script src="modernizr.custom.05819.js"></script>
+  <!-- Modernize compatibility issues -->
+  <script src="vendor/modernizr.custom.05819.js"></script>
 
 </body>
 
