added contacts page with form function + changes to interests

--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
+	<li class="nav-item">
+	 <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+	</li>
       </ul>
     </div>
   </nav>
+  <nav class="top-nav-item" >
+	<a  href="contact.html">Contact</a>
+ </nav>
 
   <div class="container-fluid p-0">
 
@@ -210,7 +216,7 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being a web developer, I enjoy most of my time with the latest computer games. For the most part in casual competition gaming with a handful of friends and family. When the opportunity arises, I love to indulge in travel and food adventures.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, In the past I was an aspiring chef, exploring different combinations of ingredients that brings new flavor to the table! I spend a large amount of my free time exploring the latest technology advancements in the front-end and back-end web development world.</p>
+	<p class="mb-0">When forced indoors, I follow a number of sci-fi/fantasy movies and television shows, In the past I was an aspiring chef, exploring different combinations of ingredients that brings new flavor to the table! I spend a large amount of my free time exploring the latest technology advancements in the front-end and back-end web dev world.</p>
       </div>
     </section>
 
@@ -226,6 +232,7 @@
             </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+	    <b>Google Developers Certification</b> Mobile Web Specialist
           </li>
         </ul>
       </div>
