added websafe for class, remove when checked!

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     </div>
   </nav>
   <nav class="top-nav-item" >
-	<a  href="contact.html">Contact</a>
+	<a href="contact.html">Contact</a>
+	<a href="websafe.html">Web Safety</a>
  </nav>
 
   <div class="container-fluid p-0">
@@ -75,7 +76,7 @@
         <div class="subheading mb-5">125 Cambon Drive San Francisco, CA 94132 ·(408) 515-0551 ·
           <a href="mailto:name@email.com">paulngu1120@email.com</a>
         </div>
-        <p class="lead mb-5">I am a prospective web developer, enthusiatic about all things web and technology! I am experienced in many front-end and back-end frameworks, and excel in proactive collaboration in solving the toughest development issues.    </p>
+        <p class="lead mb-5">I am a prospective web developer, enthusiastic about all things web and technology! I am experienced in many front-end and back-end frameworks, and excel in proactive collaboration in solving the toughest development issues.    </p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
