added portfolio section for live site assignment

--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,7 @@
   <nav class="top-nav-item">
 	<a href="index.html">Home</a>
 	<a href="websafe.html">Web Safety</a>
+	<a href="projects.html">Projects</a>
   </nav>
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
