--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	Portfolio/resume site
 	Date: Sat Mar 23 13:02:50 PDT 2019
 	modernizr script is linked at bottom of document with other dependencies.
-	Added calculate gpa function before /body to show the average gpa from both schools
   -->
 
   <meta charset="utf-8">
@@ -62,8 +61,9 @@
     </div>
   </nav>
   <nav class="top-nav-item" >
-	<a href="contact.html">Contact</a>
 	<a href="websafe.html">Web Safety</a>
+	<a href="projects.html">Projects</a>
+	<a href="contact.html">Contact</a>
  </nav>
 
   <div class="container-fluid p-0">
