fixed mobile about section crop

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
       </ul>
     </div>
   </nav>
-  <nav class="top-nav-item" >
+
+  <nav class="top-nav-item">
 	<a href="projects.html">Projects</a>
 	<a href="contact.html">Contact</a>
  </nav>
@@ -73,7 +74,7 @@
           <span class="text-primary">Nguyen</span>
         </h1>
         <div class="subheading mb-5">125 Cambon Drive San Francisco, CA 94132 ·(408) 515-0551 ·
-          <a href="mailto:name@email.com">paulngu1120@email.com</a>
+          <a href="mailto:paulngu1120@gmail.com">paulngu1120@email.com</a>
         </div>
         <p class="lead mb-5">I am a prospective web developer, enthusiastic about all things web and technology! I am experienced in many front-end and back-end frameworks, and excel in proactive collaboration in solving the toughest development issues.    </p>
         <div class="social-icons">
