--- a/contact.html
+++ b/contact.html
@@ -71,12 +71,6 @@
           <div class="resume-content">
           </div>
   	<form>
-		<input type="radio" name="title">Mr.</input>
-		<input type="radio" name="title">Mrs.</input>
-		<input type="radio" name="title">Ms.</input>
-		<input type="radio" name="title">Dr.</input>
-		<input type="radio" name="title">Prof.</input>
-		<br><br>
 	    <label for="fname" id="firstResp">Full Name</label>
 	    <input type="text" id="fname" class="fields" name="fullname" pattern="^(\w\w+)\s(\w+)$" required="true" placeholder="Your full name..">
 	
@@ -84,9 +78,9 @@
 	    <input type='text' id='email' class="fields" type='email' pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required="true" placeholder="Your email address..">
 	
 	    <label for="subject" id="subjectResp">Subject</label>
-	    <textarea id="subject" class="fields" name="subject" required="true" placeholder="Write something.." style="height:200px"></textarea>
+	    <textarea id="subject" class="fields" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 	
-	    <input type="submit" value="Submit" id="fsubmit">	
+	    <input type="submit" value="submit" id="fsubmit">	
 	  </form>
       </div>
     </section>
@@ -106,127 +100,7 @@
   <!-- Modernize compatibility issues -->
   <script src="vendor/modernizr.custom.05819.js"></script>
 
-  <script>
-	var displayfirst = document.getElementById("firstResp");
-	var displaymail = document.getElementById("mailResp");
-	var displaysub = document.getElementById("subjectResp");
-	var fullname = document.getElementById("fname");
-	var email = document.getElementById("email");
-	var textbox = document.getElementById("subject");
-	var radio = document.getElementsByName("title");
-	var messagetxt = "";
-	var chk1 = false;
-	var chk2 = false;
-	var chk3 = false;
-	
-	
-	function verifyFrm(){
-		var totradio=0;
-		if(email.valueMissing){
-			setCustomValidity("Please fill out this field.");
-		}else if(fullname.valueMissing){
-			setCustomValidity("Please fill out this field.");
-		}else if(textbox.valueMissing){
-			setCustomValidity("Please fill out this field.");
-		}
-		for(var i=0;i<5;i++){
-			if(radio[i].checked){
-				totradio++;
-				break;
-			}else{
-				continue;
-			}
-		}
-		
-		if(totradio==0){
-			window.alert("Specify Title");
-		}
-	}
-
-	function chkFirst(){
-		try{
-			if(fullname.value === ""&& chk1==false){
-				throw "Enter your full name!";
-			}
-		}
-		catch(firstnameError){
-			messagetxt=firstnameError;
-			displayfirst.innerHTML=messagetxt;
-			changeTag(displayfirst, "h5");
-		}
-		chk1=true;	
-	}//while out of focus checks to see if string in field; if not change label input to h5 tag with message to add
-	
-	function chkMail(){
-		try{
-			if(email.value === ""&&chk2==false){
-				throw "Enter your email!";
-			}
-		}
-		catch(emailError){
-			messagetxt=emailError;
-			displaymail.innerHTML=messagetxt;
-			changeTag(displaymail, "h5");
-		}
-		chk2=true;	
-	}//while out of focus checks to see if string in field; if not change label input to h5 tag with message to add
-	
-	function chksubj(){
-		try{
-			if(textbox.value === ""&&chk3==false){
-				throw "Enter your message!";
-			}
-		}
-		catch(messgError){
-			messagetxt=messgError;
-			displaysub.innerHTML=messagetxt;
-			changeTag(displaysub, "h5");
-		}
-		chk3=true;
-	}
-
-	function changeTag(from, to){
-		var n = document.createElement(to);
-		var attr = from.attributes;
-		for(var i=0;i<attr.length;i++){
-			n.setAttribute(attr[i].name, attr[i].value);
-		}
-		n.innerHTML=from.innerHTML;
-		from.parentNode.replaceChild(n, from);
-	}// function that changes html tag in document
-	
-	function createList(){
-		if(fullname.addEventListener){
-			fullname.addEventListener("blur", chkFirst, false);
-		}else if(fullname.attachEvent){
-			fullname.attachEvent("onblur", chkFirst);
-		}
-		if(email.addEventListener){
-			email.addEventListener("blur", chkMail, false);
-		}else if(email.attachEvent){
-			email.attachEvent("onblur", chkMail);
-		}
-		if(textbox.addEventListener){
-			textbox.addEventListener("blur", chksubj, false);
-		}else if(textbox.attachEvent){
-			textbox.attachEvent("onblur", chksubj);
-		}
-		var sub = document.getElementById("fsubmit");
-		if(sub.addEventListener){
-			sub.addEventListener("click", verifyFrm, false)
-		}else if(sub.attachEvent){
-			sub.attachEvent("onclick", verifyFrm);
-		}//event listeners to all input fields
-	}
-		
-	if(window.addEventListener){
-		window.addEventListener("load", createList, false);
-	}else if(window.attachEvent){
-		window.attachEvent("onload", createList);
-	}//document load listener
-
-	
-  </script>
+  <script src="js/contact.js"></script>
 </body>
 
 </html>
